@@ -67,7 +67,7 @@ quickcheck: build
 
 check: build
 	@echo "Running CRAN check..."
-	"$(R_HOME)/bin/R" CMD check --as-cran $(TGZ)
+	_R_CHECK_CRAN_INCOMING_REMOTE_=false "$(R_HOME)/bin/R" CMD check --as-cran $(TGZ)
 	@echo "DONE."
 
 install: build
