@@ -257,21 +257,33 @@ water concentrations</p></td>
       </tr><tr>
         
         <td>
-          <p><code><a href="chent_focus_sw.html">chent_focus_sw()</a></code> </p>
-        </td>
-        <td><p>Create a chemical compound object for FOCUS Step 1 calculations</p></td>
-      </tr><tr>
-        
-        <td>
           <p><code><a href="PEC_sw_focus.html">PEC_sw_focus()</a></code> </p>
         </td>
         <td><p>Calculate PEC surface water at FOCUS Step 1</p></td>
       </tr><tr>
         
         <td>
+          <p><code><a href="chent_focus_sw.html">chent_focus_sw()</a></code> </p>
+        </td>
+        <td><p>Create a chemical compound object for FOCUS Step 1 calculations</p></td>
+      </tr><tr>
+        
+        <td>
           <p><code><a href="FOCUS_Step_12_scenarios.html">FOCUS_Step_12_scenarios</a></code> </p>
         </td>
         <td><p>Step 1/2 scenario data as distributed with the FOCUS Step 1/2 calculator</p></td>
+      </tr><tr>
+        
+        <td>
+          <p><code><a href="PEC_sw_exposit_drainage.html">PEC_sw_exposit_drainage()</a></code> </p>
+        </td>
+        <td><p>Calculate PEC surface water due to drainage as in Exposit 3</p></td>
+      </tr><tr>
+        
+        <td>
+          <p><code><a href="PEC_sw_exposit_runoff.html">PEC_sw_exposit_runoff()</a></code> </p>
+        </td>
+        <td><p>Calculate PEC surface water due to runoff and erosion as in Exposit 3</p></td>
       </tr><tr>
         
         <td>
@@ -284,12 +296,6 @@ water concentrations</p></td>
           <p><code><a href="perc_runoff_reduction_exposit.html">perc_runoff_reduction_exposit</a></code> </p>
         </td>
         <td><p>Runoff reduction percentages as used in Exposit</p></td>
-      </tr><tr>
-        
-        <td>
-          <p><code><a href="PEC_sw_exposit_runoff.html">PEC_sw_exposit_runoff()</a></code> </p>
-        </td>
-        <td><p>Calculate PEC surface water due to runoff and erosion as in Exposit 3</p></td>
       </tr><tr>
         
         <td>
