@@ -1,3 +1,9 @@
+commit 7b11b5d0da29447df026002af3ae5283510fdae9
+Author: Johannes Ranke <jranke@uni-bremen.de>
+Date:   2019-04-29 13:03:00 +0200
+
+    Additional runoff data used by Agroscope
+
 commit 67cd9e04caaf18a40231262c9033fb24e8bb2a66
 Author: Johannes Ranke <jranke@uni-bremen.de>
 Date:   2019-04-26 13:45:44 +0200
